# Le-projet

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: documentation
my_project/: mkdocs.yml
my_project/docs/: index.md  module.md  test.md
src/: my_module.py
tests/: test_my_module.py
