[my project]
name = "Le projet"
version = "0.1.0"
description = "A simple arithmetic operations module"
authors = [{name = "Ali DIAKITE", email = "ali.diakite@estaca.eu"}]
license = "MIT"

dependencies = [
    "pytest>=6.0"  # Add pytest to the dependencies list for testing
]

# Optional: Define the build system (you can use setuptools)
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
